aws/multi_region_internal_alb/firewall.tf
resource "aws_security_group" "fra" {
  name        = "fra-sg"
  description = "Allow traffic only within the VPC"
  vpc_id      = aws_vpc.fra.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.fra.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.fra.cidr_block]
  }

  tags = {
    Name = "Fra SG"
  }
}

resource "aws_security_group" "dub" {
  name        = "dub-sg"
  provider    = aws.dub
  description = "Allow traffic only within the VPC"
  vpc_id      = aws_vpc.dub.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.dub.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.dub.cidr_block]
  }

  tags = {
    Name = "Dub SG"
  }
}
